Bug 593349 - Startup cache writing algorithm causes severe fragmentation r=dwitte a=blocking-final